--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ volatile = "0.2.6"
 spin = "0.5.2"
 x86_64 = "0.11.0"
 uart_16550 = "0.2.0"
+pic8259_simple = "0.2.0"
 
 [dependencies.lazy_static]
 version = "1.0"
